--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,14 @@ dependencies:
   firebase_storage: 11.5.6
   cloud_firestore: 4.13.6
   firebase_auth: ^4.15.3
+  google_fonts: ^6.1.0
+  # flutter_screenutil: ^5.9.0
+    # State Management
+  bloc: ^8.0.2
+  flutter_bloc: ^8.0.1
+    # Objects comparison
+  equatable: ^2.0.3
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
@@ -63,32 +71,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
