create logic for ispy realtime

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     # Objects comparison
   equatable: ^2.0.3
   another_flushbar: ^1.12.30
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
